# fam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  build.sh  rustfmt.toml
locales/: en.yml  es.yml
src/lib/: clustering.rs  combine.rs  conservation.rs  degap.rs  edit.rs  edit_msa.rs  fastaio.rs  filter.rs  gapping.rs  lib.rs  merge.rs  plotting.rs  random.rs  random_voronoi.rs  substitution_matrix.rs  trim.rs
src/lib/matrices/: mod.rs  substitution_matrix.rs  triangular_matrix.rs
