[package]
name = "fam"
version = "0.0.2-dev"
authors = ["Javier Iserte <jiserte@unq.edu.ar>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
rand = "0.8.3"

[lib]
name = "famlib"
path = "src/lib/lib.rs"

[[bin]]
name = "famcli"
path = "src/bin/main.rs"
test = false
doc = false

[profile.release]
lto = true
panic = 'abort'