[package]
name = "fam"
version = "0.0.4"
authors = ["Javier Iserte <jiserte@unq.edu.ar>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
rand = "0.8.3"
graphics_buffer = "0.7.5"
piston2d-graphics = "0.37.0"
tempfile = "3.2.0"
itertools = "0.10.0"

[lib]
name = "famlib"
path = "src/lib/lib.rs"

[[bin]]
name = "famcli"
path = "src/bin/main.rs"
test = false
doc = false

[profile.release]
lto = true
panic = 'abort'